Виправлено логіку пошуку бронювання за ID та покращено обробку помилок